Change -Djava.ext.dirs to -classpath when launching the diagnostic tool