@@ -1,2 +1,2 @@
 @echo off
-java -Djava.ext.dirs=lib org.moeaframework.analysis.diagnostics.LaunchDiagnosticTool
+java -classpath lib/* org.moeaframework.analysis.diagnostics.LaunchDiagnosticTool
